# Brief-PySpark

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml  pytest.ini  settings.yaml
data/march-input/: customers.csv  orders_2025-03-01.json  orders_2025-03-02.json  orders_2025-03-03.json  orders_2025-03-04.json  orders_2025-03-05.json  orders_2025-03-06.json  orders_2025-03-07.json  orders_2025-03-08.json  orders_2025-03-09.json  orders_2025-03-10.json  orders_2025-03-11.json  orders_2025-03-12.json  orders_2025-03-13.json  orders_2025-03-14.json  orders_2025-03-15.json  orders_2025-03-16.json  orders_2025-03-17.json  orders_2025-03-18.json  orders_2025-03-19.json  orders_2025-03-20.json  orders_2025-03-21.json  orders_2025-03-22.json  orders_2025-03-23.json  orders_2025-03-24.json  orders_2025-03-25.json  orders_2025-03-26.json  orders_2025-03-27.json  orders_2025-03-28.json  orders_2025-03-29.json  orders_2025-03-30.json  orders_2025-03-31.json  refunds.csv
data_pyspark/db/: daily_city_sales.csv  orders_clean.csv  sales_db.db
data_pyspark/logs/: run_report.json
data_pyspark/rejects/: rejects_items.csv
src/pandas/: partie2.ipynb  pipeline_pandas.ipynb  pipeline_pandas.py
src/pyspark/: pipeline_pyspark.py  tuto_dataframes_pyspark.ipynb  tuto_rdd_pyspark.ipynb
src/tests/: conftest.py  test_pipeline_equivalence.py
