[project]
name = "brief-pyspark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "pandas>=2.3.3",
    "pyspark>=4.0.1",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "isort>=7.0.0",
    "pandas>=2.3.3",
    "pre-commit>=4.4.0",
    "pyspark>=4.0.1",
    "pytest>=9.0.1",
    "ruff>=0.14.5",
]
